* (bug 27781) Installer does not warn about 5.1.x. Added a compatibility function
  for array_key_exists().
* Fix XML well-formedness on a few pages when $wgHtml5 is true (the default)
* (bug 28069) MediaWiki fails streaming files when mod_deflate and ob_gzhandler
  are also set.
* (bug 26223) Concurrently moving an article to different titles leaks a 
  redirect revision with no page.

=== API changes in 1.17 ===
* BREAKING CHANGE: action=patrol now requires POST
* BREAKING CHANGE: patrol token is no longer the same as edit token
* BREAKING CHANGE: Session keys returned by ApiUpload are now strings instead of integers
* (bug 24650) Fix API to work with categorylinks changes
* action=parse now correctly returns an error for nonexistent pages
* (bug 27201) Special:WhatLinksHere output no longer contains duplicate IDs
* (bug 26560) On allusers if limit < total number of users, last user gets duplicate
* (bug 27715) imageinfo didn't respect revdelete

* (bug 22738) Allow filtering by action type on query=logevent.
* (bug 22764) uselang parameter for action=parse.
* (bug 22944) API: watchlist options are inconsistent.
* (bug 22868) don't list infinite block expiry date as "now" in API logevents.
* (bug 22290) prop=revisions now outputs "comment" field even when comment.
  is empty, for consistency with list=recentchanges.
* (bug 19721) API action=help should have a way to just list for a specific
  module.
* (bug 23458) Add support for pageid parameter to action=parse requests.
* (bug 23460) Parse action should have a section option.
* (bug 21346) Make deleted images searchable by hash.
* (bug 23461) Normalise usage of parameter names in parameter descriptions.
* (bug 23548) Allow access of another users watchlist through watchlistraw
  using token and username.
* (bug 23524) Api Modules as followup to bug 14473 (Add iwlinks table to
  track inline interwiki link usage).
* Add pltitles and tltemplates to prop=links and prop=templates respectively,